# SISTEMA-ESCOLAR

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
school_system/: __init__.py  cli.py  database.py  services.py
static/: style.css
templates/: attendance.html  base.html  classes.html  enrollments.html  grades.html  index.html  reports.html  students.html  teachers.html
tests/: __init__.py  test_services.py  test_web_app.py
