[project]
name = "sistema-escolar-python"
version = "1.0.0"
description = "Sistema escolar simples em Python com SQLite e CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0"
]
authors = [
  { name = "Seu Nome" }
]
license = { text = "MIT" }

[project.scripts]
school-system = "school_system.cli:main"

[tool.ruff]
line-length = 100
